try a possible fix for broken text editing on iOS app

--- a/css/tinymce.less
+++ b/css/tinymce.less
@@ -7,6 +7,7 @@
 // these styles are applied inside the iframe that TinyMCE creates; the body tag
 // inside the iframe gets this id
 #tinymce {
+  height: 100%;
   // padding: 6px 12px; // same as .form-control
   .body-text;
   padding: 0;
